# Zoo

AnimalDB/: Animal.h  CMakeLists.txt  Zoo.h  main.cpp
MainApp/: Admin.cpp  Admin.h  CMakeLists.txt  Visitor.cpp  Visitor.h  forConnect.h  main.cpp
buyTicket/: CMakeLists.txt  main.cpp
feedAnimal/: CMakeLists.txt  main.cpp
